[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "content-repurposer"
version = "0.1.0"
description = "Content repurposing pipeline: video/audio/text -> blog + Twitter + LinkedIn + newsletter"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langgraph>=0.2",
    "langchain-groq>=0.2",
    "groq>=0.11",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
worker = [
    "celery[redis]>=5.4",
    "redis>=5.0",
]
media = [
    "yt-dlp>=2024.10",
    "ffmpeg-python>=0.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
all = [
    "content-repurposer[worker,media,dev]",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
